--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </button>
         </div>
       </div>
-      
+      <div></div>
       <div id="cardwhite" class="scoreboard1">
         <div class="team">
           <span id="teamBScore">0</span><br />
